# sdimg

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  sdimg_specification.md  test.ipynb
sdimg/: __init__.py  core.py
sdimg/fusion/: __init__.py  active_contour.py  grabcut.py  guided_filter.py  otsu.py  sync.py
sdimg/image/: __init__.py  bc.py  blur.py  denoise.py  helper.py  norm.py  remove_stripe.py  sharpen.py
sdimg/mask/: __init__.py  component.py  distance.py  edge.py  helper.py  hole.py  hull.py  morphology.py  pad.py  roi.py
sdimg/spatial/: __init__.py  _common.py  crop.py  pad.py  patch.py  resize.py  transform.py
