[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sdimg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "scikit-image",
    "concave-hull",
]

[project.optional-dependencies]
destripe = ["torch"]

[tool.setuptools.packages.find]
include = ["sdimg*"]